2021-04-07 Shahzad Muzaffar  <@smuzaffar>
	V06-02-00 Disable rootdict rule for LinkDef.h files. One should use
	classes.h and classes_def.xml files for declaring dictionaries
2021-04-07 Shahzad Muzaffar  <@smuzaffar>
	V06-01-25 Added more targets matching set SCRAM_TARGET via Self.xml
2021-04-05 Shahzad Muzaffar  <@smuzaffar>
	V06-01-24 Fix for externals symlinks for multiple targets
2021-04-01 Shahzad Muzaffar  <@smuzaffar>
	V06-01-22 Create edmplug cache file for extra taregts
	V06-01-23 Always use default target during build phase
2021-03-23 Shahzad Muzaffar  <@smuzaffar>
	V06-01-20 Use TARGETS keyword instead of VECTOR(IZE) for micro-
	instructions set builds
	V06-01-21 Added supported list of targets
2021-03-11 Shahzad Muzaffar  <@smuzaffar>
	V06-01-19 Fixes for vectorization e.g. reuse dd4hep components from
	the default build.
2021-02-16 Shahzad Muzaffar  <@smuzaffar>
	V06-01-18 Make sure to set RuntimeCache.json to avoid recreation.
2021-02-11 Shahzad Muzaffar  <@smuzaffar>
	V06-01-17 Looks like setting LD_PRELOAD=libasan.so hangs a lot of
	system commands. Revert the changes and explicitly set LD_PRELOAD
	while running dd4hep and unit tests
2021-02-10 Shahzad Muzaffar  <@smuzaffar>
	V06-01-15 Set LD_PRELOAD for [A|UB|T|SAN IBs
	V06-01-16 Set LD_PRELOAD for *SAN from gcc toolfile
2021-02-09 Shahzad Muzaffar  <@smuzaffar>
	V06-01-14 Remove GCC8 compiler condition for ASAN/UBSAN IBs
2021-02-08 Shahzad Muzaffar  <@smuzaffar>
	V06-01-13 Do not run dxr for generated genrated files
2021-02-01 Shahzad Muzaffar  <@smuzaffar>
	V06-01-12 Allow to override dd4hep listcomponents via toolfile flag
	LISTCOMPONENTS
2021-01-21 Shahzad Muzaffar  <@smuzaffar>
	V06-01-11 use scram if SCRAM not set. set LC_ALL to avoid perl
	warninsg on cc8
2021-01-11 Shahzad Muzaffar  <@smuzaffar>
	V06-01-10 Runtime hook updated to drop data externals for release
2020-10-19 Shahzad Muzaffar  <@smuzaffar>
	V06-01-08 Allow to provide flags for header checks use
	HEADER_CHECKS flag in BuildFile